--- a/Image.html
+++ b/Image.html
@@ -15,7 +15,7 @@
     </head>
     <body>
        <h1></h1>
-        <img src="C:\Users\Nishant Agarwal\Pictures\Saved Pictures\goku-wallpaper-hd.jpg" height="100%" width="100%">
+        <img src="goku-wallpaper-hd.jpg" height="100%" width="100%">
         
     </body>
 </html>
